--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <div style="display: flex; flex-direction: row;justify-content: center; padding-top: 6%;"> 
         <canvas id="canvas-infinity" style="border: 1px solid black; " ></canvas>
     </div>
+    <script src="src/obj/cube.js"></script>
+    <script src="src/game/player/Player.js"></script>
     <script src="src/engine/infinityMesh.js"></script>
     <script src="src/engine/infinityMatriz.js"></script>
     <script src="src/engine/infinityMath.js"></script>
@@ -17,7 +19,6 @@
     <script src="src/engine/infinityCanvas.js"></script>
     <script src="src/engine/infnityCamera.js"></script>    
     <script src="src/engine/infinityControl.js"></script>   
-    <script src="src/game/player/gPlayer.js"></script>
     <script src="src/engine/infinityEngine.js"></script>
     <script src="src/main.js"></script>
 </body>
