--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <canvas id="canvas-infinity" style="border: 1px solid black; " ></canvas>
     </div>
     <script src="src/obj/cube.js"></script>
+    <script src="src/engine/infnityFace.js"></script>
     <script src="src/game/player/Player.js"></script>
     <script src="src/engine/infinityMesh.js"></script>
     <script src="src/engine/infinityMatriz.js"></script>
